2016-02-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/prompt.c (do_statusbar_output, do_statusbar_delete):
	Rename a variable, for contrast and correctness.

2016-02-22  Chris Allegretta <chrisa@asty.org>
	* Add ability to kill the trailing spaces when justifying
	code.  New nanorc option kill_spaces_on_justify, we'll see
	whether this warrants a command line flahg or not.

2016-02-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (free_openfilestruct): Elide this function.
	* scr/global.c (thanks_for_all_the_fish, free_list_item): Condense.
	* src/winio.c (edit_scroll): The amount to scroll is never zero.
	* src/prompt.c (do_statusbar_prev_word, do_statusbar_next_word),
	src/move.c (do_prev_word, do_next_word): Sort these in standard way.
	* src/prompt.c (do_statusbar_output): Don't move too many bytes.
	This fixes Savannah bug #47219 (uncovered by r5655).
	* src/prompt.c (do_statusbar_output): Elide a variable.
	* src/prompt.c (do_statusbar_delete): There is no need for nulling:
	the charmove() already copies the terminating null byte.
	* src/text.c (do_justify), src/winio.c (parse_escape_sequence):
	Show the cursor after a justification and after an unrecognized
	escape sequence, and in the edit window when linting.
	* src/text.c (do_linter): Use the correct column number, also when
	messages are skipped.  And don't mind zero or negative numbers.
	This is a partial fix for Savannah bug #47131.

2016-02-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (input_tab): If the first Tab added the part that all
	matches have in common, don't require a third Tab to show the list.
	* scr/global.c (thanks_for_all_the_fish): Remove unneeded checks.

2016-02-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (get_history_completion): Avoid leaking memory
	when tabbing on a string that does not occur in the history.
	This fixes Savannah bug #47124 reported by Mike Frysinger.